--- a/views/gateway/gateway-list.hbs
+++ b/views/gateway/gateway-list.hbs
@@ -8,7 +8,6 @@
     <thead>
         <tr>
             <th scope="col">Actions</th>
-            <th scope="col">Id</th>
             <th scope="col">Name</th>
             <th scope="col">Description</th>
             <th scope="col">rootResourceId</th>
@@ -23,9 +22,8 @@
                 <a href="/gateway/delete?id={{id}}" class="btn btn-outline-danger" type="button">Delete</a>
             </th>
             <th scope="row">
-                <a href="/gateway/details?id={{id}}">{{id}}</a>
+                <a href="/gateway/details?id={{id}}">{{name}}</a>
             </th>
-            <td>{{name}}</td>
             <td>{{description}}</td>
             <td>{{rootResourceId}}</td>
             <td>{{disableExecuteApiEndpoint}}</td>
