--- a/views/cw/cw-create-log-stream.hbs
+++ b/views/cw/cw-create-log-stream.hbs
@@ -1,11 +1,7 @@
 
 <h4 class="mt-3">Create Log Stream</h4>
 <form method="post">
-    
-    <div class="mb-3">
-        <label for="groupName" class="form-label">Group Name</label>
-        <input type="text" class="form-control" id="groupName" name="groupName">
-    </div>
+    <input type="text" name="groupName" value="{{groupName}}" style="display: none;" />
 
     <div class="mb-3">
         <label for="streamName" class="form-label">Stream Name</label>
