--- a/views/cw/cw-log-group-details.hbs
+++ b/views/cw/cw-log-group-details.hbs
@@ -1,13 +1,15 @@
 
 <h3>Log Group Details - {{groupName}}</h3>
 
-<h5>Streams:</h5>
+<a href="/cw/create-log-stream?groupName={{groupName}}" role="button" class="btn btn-outline-primary">Create Log Stream</a>
+
+<h5 class="mt-2">Streams:</h5>
 <table class="table">
     <thead>
         <tr>
             <th scope="col">Actions</th>
-            <th scope="col">ARN</th>
             <th scope="col">Log Stream Name</th>
+            <th scope="col">ARN</th>
             <th scope="col">Creation Time</th>
             <th scope="col">Stored Bytes</th>
         </tr>
@@ -18,8 +20,10 @@
             <th>
                 <a href="/cw/delete-log-stream?groupName={{../groupName}}&streamName={{logStreamName}}" class="btn btn-outline-danger" type="button">Delete</a>
             </th>
+            <td>
+                <a href="/cw/stream-events?groupName={{../groupName}}&streamName={{logStreamName}}">{{logStreamName}}</a>
+            </td>
             <td>{{arn}}</td>
-            <td>{{logStreamName}}</td>
             <td>{{creationTime}}</td>
             <td>{{storedBytes}}</td>
         </tr>
