ADDED: bucket replication configuration page

--- a/views/s3/s3-bucket-detail.hbs
+++ b/views/s3/s3-bucket-detail.hbs
@@ -6,6 +6,7 @@
 <a href="/s3/bucket-cors?bucket={{name}}" role="button" class="btn btn-outline-primary" >Bucket Cors</a>
 <a href="/s3/create-website?bucket={{name}}" role="button" class="btn btn-outline-success" >Create Website</a>
 <a href="/s3/bucket-notifications?bucket={{name}}" role="button" class="btn btn-outline-success" >Bucket Notifications</a>
+<a href="/s3/bucket-replication?bucket={{name}}" role="button" class="btn btn-outline-success" >Bucket Replication</a>
 
 <a href="http://{{name}}.s3-website.localhost.localstack.cloud:4566" target="_blank" role="button" class="btn btn-outline-secondary">Goto Website</a>
 
