CHANGED: sns workflow

--- a/views/lambda/lambda-details.hbs
+++ b/views/lambda/lambda-details.hbs
@@ -121,6 +121,7 @@
 {{#ifEq tab 'event-source-mapping'}}
 <h4 class="mt-2">Event Srouce Mapping</h4>
 <p>This feature is under construction</p>
+<p>Comming Soon...</p>
 {{/ifEq}}
 
 {{#ifEq tab 'function-urls'}}
