--- a/views/layouts/layout_main.hbs
+++ b/views/layouts/layout_main.hbs
@@ -12,6 +12,7 @@
   </head>
   <body>
     {{>navbar}}
+    <div id="breadcrumb-container"></div>
 
     {{{body}}}
 
@@ -26,5 +27,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     -->
     {{> footer }}
+    <script type="text/javascript" src="/scripts/render-breadcrumb.js"></script>
   </body>
 </html>
