--- a/views/layouts/layout_main.hbs
+++ b/views/layouts/layout_main.hbs
@@ -7,8 +7,10 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 
     <title>{{#if title}}{{title}}{{else}}Local Admin{{/if}}</title>
+    <link href="/styles/app.styles.css" rel="stylesheet" >
   </head>
   <body>
     <div class="row gx-2">
