--- a/views/root.hbs
+++ b/views/root.hbs
@@ -1,39 +1,30 @@
 <div class="mb-4">
-  <h1>👋 Welcome to Localstack Admin.</h1>
-  {{ message }}
-  <div class="mt-2">
-    <h4>Configure Local Stack</h4>
-    <form action="/configure" method="post">
 
-      <div class="mb-3">
-        <label for="endpoint" class="form-label">Endpoint</label>
-        <input type="text" class="form-control" id="endpoint" name="endpoint" value="{{configuration.endpoint}}">
-      </div>
-      <div class="mb-3">
-        <label for="region" class="form-label">Region</label>
-        <input type="text" class="form-control" id="region" name="region" value="{{configuration.region}}">
-      </div>
-
-      <button type="submit" class="btn btn-outline-primary">Update</button>
-
-    </form>
+  <div class="px-4 py-5 text-center">
+    <h1 class="display-5 fw-bold">{{hero.title}}</h1>
+    <div class="col-lg-6 mx-auto">
+      <p class="lead mb-4">{{hero.details}}</p>
+    </div>
   </div>
 
-
-  <div class="container">
-    <div class="row gx-2 gy-2">
-    {{#each cards}}
-      <div class="col-sm-3">
-        <div class="card" style="height: 14rem; overflow: hidden">
-          <div class="card-body">
-            <h5 class="card-title">{{title}}</h5>
-            <h6 class="card-subtitle mb-2 text-body-secondary">{{subtitle}}</h6>
-            <p class="card-text">{{description}}</p>
-            <a href="{{link}}" class="card-link">Explore</a>
-          </div>
+  <div class="container px-4 py-5">
+    <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
+      {{#each cards}}
+      <div class="col d-flex align-items-start">
+        <div class="icon-square bg-light text-dark flex-shrink-0 me-3">
+          <i class="bi bi-{{bicon}}" width="1em" height="1em"></i>
+        </div>
+        <div>
+          <h2>{{title}}</h2>
+          <p class="text-muted">{{subtitle}}</p>
+          <p>{{description}}</p>
+          <a href="{{link}}" class="icon-link">
+            Explore
+            <i class="bi bi-chevron-right"></i>
+          </a>
         </div>
       </div>
-    {{/each}}
+      {{/each}}
     </div>
   </div>
 
